--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -112,7 +112,7 @@ header{
 }
 
 footer {
-    height: 150px;
+    height: 5em;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     -webkit-border-bottom-left-radius: 4px;
@@ -125,6 +125,10 @@ footer {
     box-shadow: 
         5px 5px 10px -4px rgba(0,0,0,0.35),
         -5px 5px 10px -4px rgba(0,0,0,0.35);
+}
+
+footer p {
+  padding: 0px 10px;
 }
 
 section.main .left .search {
@@ -241,7 +245,7 @@ h3.title-user-list{
   margin-top: 10px;
 }
 
-.show-description pre {
+pre {
   word-wrap: break-word;
 }
 
