Style default structure with wrapper

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -188,7 +188,8 @@ header,
 footer,
 section.main,
 section.show,
-.image-cover {
+.image-cover,
+#div-wrapper {
     margin: auto;
     max-width: 960px;
 }
