--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -6,7 +6,9 @@
 /*-----------------------------------------------------------------------------*/
 
 .map, #map{
-    margin-top: 10px;
+  margin-top: 10px;
+  width: 100%; 
+  height: 400px;
 }
 
 
@@ -40,6 +42,12 @@ body, html {
 
 .link-title{
     color: #111111;
+}
+
+.link-detail {
+  color: #31495A;
+  font-weight: bold;
+  text-decoration: none;
 }
 
 section.main {
