--- a/app/assets/stylesheets/events_se.css
+++ b/app/assets/stylesheets/events_se.css
@@ -73,7 +73,6 @@
     width:60%;
     float: right;
     max-height: 100%;
-
 }
 
 .title-event,.date-event, .body-text-event{
@@ -88,7 +87,8 @@
 
 .date-event{
     font-size: 0.7em;
-    padding-left: 1em;
+    padding-left: 0.5em;
+    padding-top: 0.5em;
     padding-bottom: 1em;
 }
 
