--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -66,6 +66,7 @@ section.main {
     width:100%;
 }
 
+
 .header-content-margin{
     margin:5px;
 }
@@ -761,12 +762,77 @@ input[type=checkbox].categorie:checked + label:after {
 }
 .profile-picture-mini {
   padding: 0px 10px;
+  border-radius: 50%;
 }
 
 .profile-picture-large {
   
 }
 
+.profile-main-content{
+    padding-left:15px;
+    padding-right:15px;
+}
+
+.profile-main-title{
+  font-size:30px;
+}
+.profile-main-title-inner{
+  font-size:30px;
+  margin-top: 0px;
+}
+
+.terms-and-conditions{
+  font-size:12px;
+  text-decoration:italic;
+}
+
+.profile-main-leftcolumn, .profile-main-rightcolumn {
+    border: 1px solid white;
+    min-height: 250px;
+    color: white;  
+    display:inline-block;
+    vertical-align:top;
+    color:black;
+    font-size:16px;
+}
+.profile-main-leftcolumn {
+     width: 25%;
+}
+
+.profile-main-rightcolumn {
+    width: 74%;
+    position: relative;
+}
+
+.profile-main-rightcolumn button{
+     position: absolute;
+     bottom: 50px;
+     right: 0;
+     font-size:20px;
+}
+.profile-main-rightcolumn .terms-and-conditions{
+     position: absolute;
+     bottom: 0;
+     right: 0;
+     font-size:10px;
+}
+
+.profile-image{
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
+    -webkit-transition:cubic-bezier(.34,.43,0,1.02) 0.2s;
+    -moz-transition:cubic-bezier(.34,.43,0,1.02) 0.2s;
+    transition:cubic-bezier(.34,.43,0,1.02) 0.2s;
+    box-shadow: 0px 0px 0px 2pt transparent;
+    border: 0px solid #FFF;
+	}
+.profile-td{
+  width:70%; 
+  display: table-cell;
+  vertical-align: top; 
+}
 .header-content > h1 {
 
 }
@@ -855,6 +921,10 @@ table.first-login-table td {
     display: inline-block;
 }
 
+.flex-item .button_to{
+  padding-left:10px;
+  padding-top:15px;
+}
 .site-title a{
     font-size: 2.5em;
     overflow:auto;
