--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,8 +41,9 @@
       <div class="header-content-margin">
       <% if user_signed_in? %>
           <div class="btn-user">
-            <!-- BEGIN FETCHING -->
-            <span class="fetching" class="menu" style="display: <%= @user_is_fetching ? 'inline' : 'none' %>">Fetching</span>
+            <!-- BEGIN FETCHING -->            
+              <span title="Your events are currently fetching" class="fetching-flag underway menu" style="display: <%= @user_is_fetching ? 'inline-block' : 'none' %>"></span>
+              <span class="fetching-flag done menu"></span>
             <!-- END FETCHING -->
             <%= link_to "Profile", user_path(current_user), :class => "menu", :method => :get %>
             <%= link_to "Sign out", destroy_user_session_path, :class => "menu", :method => :delete %>
@@ -54,16 +55,15 @@
           <div class="fb-login-button fb-login-button-small"><%= link_to(image_tag("fb_login_small.png", :alt => "Facebook login", :class => ""),user_omniauth_authorize_path(:facebook)) %></div>
       <% end %>
           <div class="site-title"><%= link_to("Social Events",root_url)%></div>
+          <div style="margin-left: 12px; padding: 2px;">
+            <span class="notify error alert" role="alert">  
+              <%= alert if alert!=nil %>
+            </span> 
 
-        <% if alert!=nil %>  
-          <span class="notify error alert" role="alert">  
-            <%= alert %>
-          </span>
-        <% elsif  notice!=nil && flash_first_login == nil %>  
-          <span class="notify warning notice" role="alert">  
-            <%= notice %>
-          </span>
-        <% end %>
+            <span class="notify warning notice" role="alert">  
+              <%= notice if  notice!=nil && flash_first_login == nil %>
+            </span>
+        </div>
 
         <span class="welcome"<%== ' style="display: none;"' if notice != nil || alert != nil %>>
           <% if user_signed_in? %>
