--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
 
     <div class="profile-main-content">
         <h1 class="profile-main-title">Your contributions</h1>
-
+        <%= button_to "Supprimer", "/events", :class => "btn", :method => :delete %>
         <ul class="flex-container flex-container-events">
         <% @events.each do |event| %>
           
