--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   
   <script src="//code.jquery.com/ui/1.11.3/jquery-ui.js"></script>
 </head>
-<body>   
+<body style="background-image: url('<%= image_path('bg.jpg') %>');">   
   <!-- INTEGRATION -->
   
   <div id="div-wrapper">
