--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
         </div>
         <div class="profile-main-rightcolumn">
             <p class="profile-main-title-inner"><%= @user.first_name %> <%= @user.last_name %></p>
-            <p>Shared events <%= @user.contributions_counter %></p>
+            <p><label>Shared events:</label> <%= @user.contributions_counter %></p>
           
             <p>Contribute to our website by sharing your events</p>
 
