Correct GMaps for production

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -106,8 +106,8 @@
               <label class="se-placeholder">
                   <input type="text" placeholder="Search" class="search-input" id="input-event-title" />
               </label>
-              <a class="btn btn-small" href="#" id="button-event-refresh"> <i class="icon-refresh"></i></a>
-              <a class="btn btn-small" href="#" id="button-event-title"> <i class="icon-search"></i></a>
+              <a class="btn btn-small" href="#" id="button-event-refresh" title="Reset filters and search"> <i class="icon-refresh"></i></a>
+              <a class="btn btn-small" href="#" id="button-event-title" title="Search"> <i class="icon-search"></i></a>
           </div>
       </div>
       <div class="content">
