--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,7 @@
 <% content_for :javascript_includes do %>
   <script src="//maps.google.com/maps/api/js?v=3.13&sensor=false&libraries=geometry" type="text/javascript"></script>
-  <script src="//google-maps-utility-library-v3.googlecode.com/svn/tags/markerclustererplus/2.0.14/src/markerclusterer_packed.js" type="text/javascript"></script>
-  <%= raw javascript_include_view_js %>
+  <%= javascript_include_tag 'gmaps/markerclusterer_packed', 'data-turbolinks-track' => true %>
+  <%= javascript_include_tag 'gmaps/gmaps_google', 'data-turbolinks-track' => true %>
 <% end %>
 
 <div id="dialog-cover" title="<%= @event.title %>" style="display: none;">
