Reactivate filter for user pages and remove css for small screen

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -827,9 +827,9 @@ table.first-login-table td{
      font-size:20px;
 }
 .profile-main-rightcolumn .terms-and-conditions{
-     position: absolute;
+     /*position: absolute;
      bottom: 0;
-     right: 0;
+     right: 0;*/
      font-size:10px;
 }
 
